[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/integration/MainMenuUI.gd" id="1_menu"]
[ext_resource type="PackedScene" path="res://scenes/ui/MainConfig.tscn" id="2_cfg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelOptions" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="Center/PanelOptions"]
layout_mode = 2
text = "Five Nights of Ailurofobia"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Center/PanelOptions"]
layout_mode = 2
text = "Jugar"

[node name="ConfigButton" type="Button" parent="Center/PanelOptions"]
layout_mode = 2
text = "Configuraci√≥n"

[node name="SavesButton" type="Button" parent="Center/PanelOptions"]
layout_mode = 2
text = "Partidas guardadas"

[node name="ConfigPanel" parent="Center" instance=ExtResource("2_cfg")]

[node name="SavesPanel" type="PanelContainer" parent="Center"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Center/SavesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="Center/SavesPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SavesTitle" type="Label" parent="Center/SavesPanel/Margin/VBox"]
layout_mode = 2
text = "Partidas guardadas"

[node name="SavesList" type="ItemList" parent="Center/SavesPanel/Margin/VBox"]
custom_minimum_size = Vector2(300, 180)
layout_mode = 2

[node name="LoadButton" type="Button" parent="Center/SavesPanel/Margin/VBox"]
layout_mode = 2
text = "Cargar seleccionada"

[node name="BackButton" type="Button" parent="Center/SavesPanel/Margin/VBox"]
layout_mode = 2
text = "Volver"
